<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_label">AlarmClock Deluxe (Wecker, Uhr, Timer, Stoppuhr)</string>
    <string name="default_label">Alarm</string>
    <string name="schedule_alarm_title">Schedule alarm</string>
    <string name="pause_alarm_title">Pause alarm</string>
    <string name="pause_alarm_range">Paused: %1$s</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_flash">Flash</string>
    <string name="delete_occasional_alarm_after_use_title">Delete alarm once dismissed</string>
    <string name="time_picker_dialog_title">Select time</string>
    <string name="delay_picker_dialog_title">Alarm in…</string>
    <string name="date_picker_dialog_title">Select Date</string>
    <string name="alarm_label_box_title">Alarm label</string>
    <string name="sync_alarm_by_label_title">Synchronize alarms sharing the same label</string>
    <string name="label_default">Default</string>
    <string name="label_off">Off</string>
    <string name="label_never">Never</string>
    <string name="label_indefinitely">Indefinitely</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="label_new_image">New image</string>
    <string name="label_new_font">New font</string>
    <string name="warning">Warning</string>
    <string name="label_hours">Hours</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_seconds">Seconds</string>
    <string name="confirm_action_prompt">\n\nDo you want to continue?</string>
    <string name="default_alarm_ringtone_title">Default alarm sound</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="timer_sound">Timer sound</string>
    <string name="add_new_sound">Add new</string>
    <string name="button_tip_title">Long press the \"+\" button to add a folder</string>
    <string name="remove_sound">Remove</string>
    <string name="selected">Selected</string>
    <string name="more_options">More options</string>
    <string name="confirm_remove_custom_ringtone">Alarms and timers using this sound will play the default sound instead.</string>
    <string name="progress_ringtones">Adding ringtones… (%1$d/%2$d)</string>
    <string name="your_sounds">Your sounds</string>
    <string name="device_sounds">Device sounds</string>
    <string name="custom_ringtone_lost_permissions">The sound content cannot be accessed.</string>
    <string name="default_timer_ringtone_title">Timer Expired</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_scheduled_for">Scheduled for %s</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_disable_text">Turn off permanently</string>
    <string name="alarm_alert_dismiss_and_delete_text">Dismiss &amp; Delete</string>
    <string name="alarm_alert_dismiss_and_delete_text_button">Dismiss &amp;\nDelete</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_disabled_text">Alarm turned off permanently</string>
    <string name="alarm_alert_off_and_deleted_text">Alarm off and deleted</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="occasional_alarm_alert_predismiss_title">Upcoming occasional alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string name="timer_notifications_less_min">Less than a minute remaining</string>
    <string name="timer_notifications_hours"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes"><xliff:g example="2 minutes" id="MINUTES">%2$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="2 minutes" id="MINUTES"> %2$s</xliff:g> remaining</string>
    <string name="timer_notifications_seconds"><xliff:g example="2 seconds" id="SECONDS">%4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes_seconds"><xliff:g example="2 minutes" id="MINUTES">%2$s</xliff:g> <xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_seconds"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g> <xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes_seconds"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="2 minutes" id="MINUTES"> %2$s</xliff:g><xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_accessibility_custom_time_added">%1$s minute added to timer, <xliff:g example="5 hours remaining" id="TIME">%2$s</xliff:g></string>
    <string name="timer_remaining_single">remaining</string>
    <string name="timer_remaining_multiple">remaining</string>
    <string name="alarm_confirmation_toast_1">Alarm set for less than 1 minute from now.</string>
    <string name="alarm_confirmation_toast_2">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_3">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_4">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_5">Alarm set for <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_6">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_7">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_8">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <plurals name="days">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> days</item>
    </plurals>
    <plurals name="hours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hours</item>
    </plurals>
    <plurals name="hours_short">
        
        <item quantity="one">1 hr</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hr</item>
    </plurals>
    <plurals name="minutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> minutes</item>
    </plurals>
    <plurals name="minutes_short">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> min</item>
    </plurals>
    <plurals name="seconds">
        
        <item quantity="one">1 second</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> seconds</item>
    </plurals>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="loading_widget">Loading\u2026</string>
    <string name="analog_widget">Analog clock</string>
    <string name="digital_widget">Digital clock</string>
    <string name="vertical_widget">Vertical clock</string>
    <string name="next_alarm_widget">Next alarm</string>
    <string name="settings">Settings</string>
    <string name="settings_permission_message">One or more essential permissions are denied. Not granting them can lead to malfunctions.</string>
    <string name="settings_permission_summary">Click here to display the Permissions management page.</string>
    <string name="style_category_title">Style</string>
    <string name="colors_category_title">Colors</string>
    <string name="font_category_title">Font</string>
    <string name="no_alarms">No Alarms</string>
    <string name="mighty_new_alarm_repeat_label">Repeat on</string>
    <string name="mighty_new_alarm_set_date">Set a specific date</string>
    <string name="mighty_new_alarm_pick_date">Choose date</string>
    <string name="mighty_search_alarms_hint">Search alarms…</string>
    <string name="mighty_filter_enabled">Enabled</string>
    <string name="mighty_filter_repeating">Repeating</string>
    <string name="mighty_filter_one_shot">One-shot</string>
    <string name="mighty_filter_reset">Reset filters</string>
    <string name="mighty_category_stats">Statistics</string>
    <string name="mighty_device_stats_title">Device statistics</string>
    <string name="mighty_export_event_log">Export event log</string>
    <string name="mighty_export_event_log_summary">Share the alarm event history as CSV</string>
    <string name="mighty_view_event_log">View event log</string>
    <string name="mighty_view_event_log_summary">Browse alarm event history in the app</string>
    <string name="mighty_category_global_mute">Global mute</string>
    <string name="mighty_global_mute_title">Global mute</string>
    <string name="mighty_category_wifi_rules">Wi-Fi rules</string>
    <string name="mighty_wifi_reevaluate_title">Re-check Wi-Fi rules now</string>
    <string name="mighty_wifi_reevaluate_summary">Applies enable/disable rules based on the currently connected Wi-Fi network</string>
    <string name="mighty_category_backup">JSON backup</string>
    <string name="mighty_backup_folder_title">Backup folder</string>
    <string name="mighty_backup_schedule_enabled_title">Automatic backup</string>
    <string name="mighty_backup_interval_title">Backup interval</string>
    <string name="mighty_backup_now_title">Back up now</string>
    <string name="mighty_category_exchange">Exchange</string>
    <string name="mighty_exchange_device_name_title">Device name</string>
    <string name="mighty_exchange_add_folder_title">Add exchange folder</string>
    <string name="mighty_exchange_folders_title">Configured folders</string>
    <string name="mighty_exchange_scan_now_title">Scan now</string>
    <string name="mighty_exchange_inbox_title">Inbox</string>
    <string name="mighty_category_clock">Clock</string>
    <string name="mighty_category_tags">Tags</string>
    <string name="mighty_manage_tags_title">Manage tags</string>
    <string name="mighty_manage_tags_summary">Create, color, or delete alarm tags</string>
    <string name="mighty_display_timezone_globe_title">Show timezone globe</string>
</resources>